Closed Bug 1889054 Opened 2 years ago Closed 2 years ago

Firefox fails to compile in non-unified builds

Categories

(Firefox Build System :: General, defect)

Firefox 124
x86_64
Linux
defect

Tracking

(firefox126 fixed)

RESOLVED FIXED
126 Branch
Tracking Status
firefox126 --- fixed

People

(Reporter: amit.prakash.ambasta, Assigned: amit.prakash.ambasta)

Details

Attachments

(5 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:124.0) Gecko/20100101 Firefox/124.0

Steps to reproduce:

Build w/ system-icu and without unified builds

mozconfig_add_options_ac '--disable-unified-build' --disable-unified-build
mozconfig_add_options_ac '--with-system-icu' --with-system-icu
...
./mach build

Actual results:

Multiple build failures due to missing imports

MOZ_TRY in intl/components/src/TimeZone.h
cstddef in layout/style/PseudoStyleType.h
mozilla/WidgetUtilsGtk.h in widget/gtk/GtkCompositorWidget.h
DocAccessible-inl.h in accessible/html/HTMLTableAccessible.cpp

Expected results:

Build should succeed

Patch for missing headers for size_t

The Bugbug bot thinks this bug should belong to the 'Core::Disability Access APIs' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Disability Access APIs
Product: Firefox → Core

Missing headers for MOZ_TRY in TimeZone.cpp

Missing header for GdkIsWaylandDisplay in widget/gtk/GtkCompositorWidget.cpp

Missing header for DocAccessible::FireDelayedEvent in accessible/html/{HTMLSelectAccessible,HTMLTableAccessible}.cpp

Component: Disability Access APIs → General
OS: Unspecified → Linux
Hardware: Unspecified → x86_64

Patch 1 has already landed in gecko-dev due to #1882942

Product: Core → Firefox Build System
Assignee: nobody → amit.prakash.ambasta
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2fc58e526510 Fix issues with non-unified builds missing header inclusions. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: