Bug 1889054 - Fix issues with non-unified builds missing header inclusions. r=emilio

Signed-off-by: Amit Prakash Ambasta <amit.prakash.ambasta@gmail.com>

Differential Revision: https://phabricator.services.mozilla.com/D207004